src/objects/Motion_Inquiry_Information__mdt.object
<CustomObject>
    <fields>
        <fullName>Inquiry_Action__c</fullName>
        <label>Inquiry Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Motion Inquiry Information</label>
    <pluralLabel>Motion Inquiry Informations</pluralLabel>
</CustomObject>